<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.blvckbytes</groupId>
    <artifactId>ChestShopExtensions</artifactId>
    <version>0.6</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>chestshop-repo</id>
            <url>https://repo.minebench.de/</url>
        </repository>
        <repository>
            <id>opencollab-snapshot</id>
            <url>https://repo.opencollab.dev/main/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.13</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.acrobot.chestshop</groupId>
            <artifactId>chestshop</artifactId>
            <version>3.12.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.blvckbytes</groupId>
            <artifactId>ItemPredicateParser</artifactId>
            <version>0.0.26</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <dependency>
            <groupId>at.blvckbytes</groupId>
            <artifactId>CMMapper</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.geysermc.floodgate</groupId>
            <artifactId>api</artifactId>
            <version>2.2.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>config/**</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>${project.name}-${project.version}</finalName>

                    <artifactSet>
                        <includes>
                            <include>at.blvckbytes:CMMapper</include>
                            <include>at.blvckbytes:ComponentMarkup</include>
                            <include>me.blvckbytes:SyllablesMatcher</include>
                            <include>com.github.cryptomorin:XSeries</include>
                            <include>org.jetbrains:annotations</include>
                        </includes>
                    </artifactSet>

                    <relocations>
                        <relocation>
                            <pattern>at.blvckbytes.cm_mapper</pattern>
                            <shadedPattern>at.blvckbytes.chestshop_extensions.cm_mapper</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>at.blvckbytes.component_markup</pattern>
                            <shadedPattern>at.blvckbytes.chestshop_extensions.component_markup</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <shadedPattern>at.blvckbytes.chestshop_extensions.xseries</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>org.jetbrains.annotations</pattern>
                            <shadedPattern>at.blvckbytes.chestshop_extensions.jetbrains_annotations</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>org.intellij.lang.annotations</pattern>
                            <shadedPattern>at.blvckbytes.chestshop_extensions.intellij_annotations</shadedPattern>
                        </relocation>
                    </relocations>

                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/license/**</exclude>
                                <exclude>META-INF/*</exclude>
                                <exclude>META-INF/maven/**</exclude>
                                <exclude>LICENSE</exclude>
                                <exclude>NOTICE</exclude>
                                <exclude>/*.txt</exclude>
                                <exclude>build.properties</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>